--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Ryan Fitzgerald",
   "dependencies": {
     "gatsby": "^2.25.0",
+    "gatsby-plugin-netlify-cms": "^4.3.15",
+    "netlify-cms-app": "^2.14.0",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-feed": "^2.5.14",
     "gatsby-plugin-google-analytics": "^2.3.18",
